Fix bug #39767: The right scroll bar column still can be displayed on Requests/Shift Trade when just several results are searched out

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -129,6 +129,11 @@
 		height: 68vh;
 		margin: 15px;
 
+		.ui-grid-contents-wrapper{
+			overflow-y: auto;
+			height: 110%;
+		}
+
 		.ui-grid-cell-contents.ui-grid-cell-contents {
 			width: 85%;
 			text-align: left;
